<resources>
    <string name="app_name">GeminiMex</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_cfd">交易</string>
    <string name="main_tab_asset">资产</string>
    <string name="main_tab_me">我的</string>
    <string name="version_name">版本号</string>
    <string name="not_authorization">授权失败</string>
    <string name="hint">提示</string>
    <string name="server_error">服务器忙，请稍后再试</string>
    <string name="key_download">再按一次退出程序</string>
    <string name="is_downing"> 正在下载</string>
    <string name="is_downing1">请在通知栏查看下载进度！</string>
    <string name="download">下载</string>
    <string name="download_error">下载失败</string>
    <string name="download_error1">请到我的页面手动更新！</string>
    <string name="share">分享</string>
    <string name="start_share">开始分享</string>
    <string name="share_no_wx">请检查是否安装微信客户端</string>
    <string name="share_no_qq">请检查是否安装QQ客户端</string>
    <string name="umeng_share_cancel">取消分享</string>
    <string name="umeng_share_weixin">微信</string>
    <string name="umeng_share_weixinq">微信朋友圈</string>
    <string name="umeng_share_qqc">QQ空间</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="thousand">万</string>
    <string name="billion">亿</string>
    <string name="confirm">确认</string>
    <string name="log_out">退出登录</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="update_username">修改昵称</string>
    <string name="dialog_message">敬请期待！</string>
    <string name="photo_error">拍照无法正常使用</string>
    <string name="update_app_isforce">此次更新为重大更新，请点击确定！</string>
    <string name="update_dialog_content">更新内容</string>
    <string name="select">选择</string>
    <string name="xc">相册</string>
    <string name="pz">拍照</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="upload_ok">上传成功</string>
    <string name="upload_error">上传失败</string>
    <string name="update_ok">修改成功</string>
    <string name="update_error">修改失败</string>
    <string name="assets_pwd_hint">请输入资金密码</string>
    <string name="no_null_hint">请输入</string>
    <string name="is_day_status1">秒前</string>
    <string name="is_day_status2">分钟前</string>
    <string name="is_day_status3">小时前</string>
    <string name="is_day_status4">昨天</string>
    <string name="is_day_status5">前天</string>
    <string name="market">行情</string>
    <string name="notice_details">消息详情</string>
    <string name="date">时间</string>
    <string name="kline_hour_hight">24h最高</string>
    <string name="kline_hour_low">24h最低</string>
    <string name="kline_hour_vol">24h量</string>
    <string name="kline_hour_increase">24h涨幅</string>
    <string name="kline_1min">1分</string>
    <string name="kline_5min">5分</string>
    <string name="kline_30min">30分</string>
    <string name="kline_60min">1小时</string>
    <string name="kline_1day">日K</string>
    <string name="kline_1week">周K</string>
    <string name="kline_1month">月K</string>
    <string name="kline_open">开盘</string>
    <string name="kline_close">收盘</string>
    <string name="kline_rise">涨跌额</string>
    <string name="kline_quote">涨跌幅</string>
    <string name="max_hight">最高</string>
    <string name="max_low">最低</string>
    <string name="vol">成交</string>
    <string name="sells">卖出</string>
    <string name="buys">买入</string>
    <string name="login_failure">未登录或登录失效</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="new_user_register">新用户注册</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="new_pwd">新密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="asset_pwd">提币密码</string>
    <string name="new_asset_pwd">新提币密码</string>
    <string name="asset_pwd_confirm">确认提币密码</string>
    <string name="back_pwd">找回密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="code_login">验证码登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="login_pwd">登录密码</string>
    <string name="update_login_pwd">修改登录密码</string>
    <string name="update_asset_pwd">修改提币密码</string>
    <string name="code">验证码</string>
    <string name="sms_code">短信验证码</string>
    <string name="send">发送</string>
    <string name="send_ok">发送成功</string>
    <string name="send_error">发送失败</string>
    <string name="username_formar_error">昵称格式错误</string>
    <string name="phone_formar_error">手机号格式错误</string>
    <string name="pwd_formar_error">密码格式错误</string>
    <string name="asset_pwd_formar_error">提币密码格式错误</string>
    <string name="code_formar_error">验证码格式错误</string>
    <string name="pwd_vali_error">两次密码输入不一致</string>
    <string name="asset_pwd_vali_error">两次提币密码输入不一致</string>
    <string name="pwd_asset_equals_error">密码和提币密码不能相同</string>
    <string name="send_sms_code_hint">已向手机号%1$s发送验证码，请注意查收</string>
    <string name="username">昵称</string>
    <string name="china"> 中国大陆</string>
    <string name="china_hongkong"> 中国香港</string>
    <string name="china_macao"> 中国澳门</string>
    <string name="china_taiwan"> 中国台湾</string>
    <string name="india"> 印度</string>
    <string name="japan"> 日本</string>
    <string name="korea"> 韩国</string>
    <string name="britain"> 英国</string>
    <string name="germany"> 德国</string>
    <string name="france"> 法国</string>
    <string name="terms_service_one">我已阅读并同意</string>
    <string name="terms_service_two">《服务条例》</string>
    <string name="terms_service_hint">请阅读并同意《服务条例》</string>
    <string name="login_regist">注册/登录</string>
    <string name="down_url">下载链接</string>
    <string name="sys_setting">系统设置</string>
    <string name="version_update">版本更新</string>
    <string name="amount_max">总资产折合($)</string>
    <string name="asset_wallet">钱包账户</string>
    <string name="asset_cfd">合约账户</string>
    <string name="usable">可用</string>
    <string name="frost">冻结</string>
    <string name="asset_convert">折合($)</string>
    <string name="account_balance">账户余额</string>
    <string name="profit_unrealized">总浮动盈亏</string>
    <string name="profit_realized">已实现盈亏</string>
    <string name="frost_profit">冻结收益</string>
    <string name="transfer">划转</string>
    <string name="recharge">充币</string>
    <string name="recharge_record">充币记录</string>
    <string name="withdraw">提币</string>
    <string name="withdraw_record">提币记录</string>
    <string name="exchange">兑换</string>
    <string name="exchange_record">兑换记录</string>
    <string name="area">＋ %1$s</string>
    <string name="head_img">头像</string>
    <string name="switch_language">切换语言</string>
    <string name="pwd_type_hint">8-16位字母、数字组成,首位为字母</string>
    <string name="username_type_hint">1-10位字母、数字、汉字组成</string>
    <string name="addres">地址</string>
    <string name="transaction">交易</string>
    <string name="transaction_records">交易记录</string>
    <string name="number">数量</string>
    <string name="save_code">保存二维码</string>
    <string name="recharge_hint">请勿向上述地址充值任何其它币种资产，否则资产将不可找回。\n充值至以上账户后，需整个网络节点确认后方可到账及提现。\n充值地址可能会改变，请确认每次充值时都从此界面获取最新充值地址。</string>
    <string name="query_recharge_error">获取充币地址失败</string>
    <string name="copy_ok">已复制</string>
    <string name="code_down">保存成功，保存位置在:</string>
    <string name="currency">币种</string>
    <string name="all">全部</string>
    <string name="fee">手续费</string>
    <string name="min_exchange_number">最小兑换数量</string>
    <string name="arrivals_number">到账数量</string>
    <string name="withdrawal_check_time">提币审核时间 09:00-21:00(UTC+08:00 )</string>
    <string name="withdrawal_hint">请仔细检查填写的钱包地址是否正确，钱包地址错误将导致提现失败或提现到他人钱包，造成无法挽回的损失！\n为保障资金安全，当您账户安全策略变更、密码修改、我们会对提币进行人工审核，请耐心等待工作人员电话或邮件联系。请务必确认手机安全，防止信息被篡改或泄露。</string>
    <string name="min_withdrawal_number">最小提币数量</string>
    <string name="capture_hint">将二维码放入框内,即可自动扫描</string>
    <string name="safety_verification">安全验证</string>
    <string name="with_submit_ok">提交成功</string>
    <string name="usable_number_no">可用数量不足</string>
    <string name="input_number_error">输入数量有误！</string>
    <string name="withdrawal_address_error">请填写正确转出钱包地址！</string>
    <string name="exchange_number">兑换数量</string>
    <string name="input_exchange_number">请输入兑换数量</string>
    <string name="received_number">收到数量</string>
    <string name="rate">汇率</string>
    <string name="exchange_ok">兑换成功</string>
    <string name="switchs">切换</string>
    <string name="transfer_number">划转数量</string>
    <string name="input_transfer_number">请输入划转数量</string>
    <string name="data_null">暂无记录</string>
    <string name="completed">已完成</string>
    <string name="under_review">审核中</string>
    <string name="deposited">已放币</string>
    <string name="rejected">已拒绝</string>
    <string name="cfd_account_usable">合约账户可用余额</string>
    <string name="position">持仓</string>
    <string name="open_position">开仓</string>
    <string name="record">记录</string>
    <string name="speed_position">极速开仓</string>
    <string name="plan_position">计划开仓</string>
    <string name="multiple">杠杆倍数</string>
    <string name="plan_price">计划价格</string>
    <string name="can_open_number">可开仓数量：</string>
    <string name="transaction_number">交易量：</string>
    <string name="stop_loss">止损(～)</string>
    <string name="stop_profit">止盈(～)</string>
    <string name="plan_open_rise">计划开多</string>
    <string name="plan_open_fall">计划开空</string>
    <string name="speed_open_rise">极速开多</string>
    <string name="speed_open_fall">极速开空</string>
    <string name="prcie">价格</string>
    <string name="index_price">指数价</string>
    <string name="delegate_record">委托记录</string>
    <string name="delegate_date">委托时间</string>
    <string name="transaction_id">交易ID</string>
    <string name="position_number">持仓量(%1$s)</string>
    <string name="open_prcie">开仓价格(USDT)</string>
    <string name="open_prcies">开仓价格</string>
    <string name="transaction_numbers">交易量(USDT)</string>
    <string name="bond_numbers">保证金(USDT)</string>
    <string name="cancel_order">撤单</string>
    <string name="undone_delegate">未完成委托</string>
    <string name="close_position_delegate">平仓委托</string>
    <string name="closed">已平仓</string>
    <string name="cfd_order_overflow">已爆仓</string>
    <string name="cfd_order_close">委托中</string>
    <string name="cfd_order_cancel">已撤单</string>
    <string name="compulsory_closed">强制平仓</string>
    <string name="close_number">平仓数量(%1$s)</string>
    <string name="close_numbers">平仓数量</string>
    <string name="close_price">平仓价格(USDT)</string>
    <string name="close_prices">平仓价格</string>
    <string name="cfd_profit">收益(USDT)</string>
    <string name="close_position">平仓</string>
    <string name="speed_close_position">闪电平仓</string>
    <string name="add_balance">追加保证金</string>
    <string name="curr_number">可平量(%1$s)</string>
    <string name="profit_rate">收益率</string>
    <string name="curr_price">当前价格</string>
    <string name="speed_close_position_hint">请输入平仓数量按照市价平仓</string>
    <string name="sysol">交易对</string>
    <string name="new_prcie">最新价</string>
    <string name="day_vol">24H额</string>
    <string name="is_version_new_hide">当前已是最新版本</string>
    <string name="transfer_ok">划转成功</string>
    <string name="number_no_hint">%1$s不足</string>
    <string name="open_position_ok">开仓成功</string>
    <string name="open_position_error">开仓失败</string>
    <string name="cancel_order_ok">撤单成功</string>
    <string name="cancel_order_error">撤单失败</string>
    <string name="close_order_ok">平仓成功</string>
    <string name="close_order_error">平仓失败</string>
    <string name="add_balance_ok">追加成功</string>
    <string name="add_balance_error">追加失败</string>
    <string name="cancel_order_hint">确定撤销该交易单吗？</string>
    <string name="close_order_record">平仓委托记录</string>
    <string name="unclose_order_record">已平仓记录</string>
    <string name="finish_order_record">平仓记录</string>
    <string name="direct_push_num">直推人数</string>
    <string name="valid_user_num">团队有效人数</string>
    <string name="team_performance">团队业绩</string>
    <string name="grade">等级</string>
</resources>