<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/photographBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:text="@string/pz"
        android:textColor="@color/text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/localPhotosBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:text="@string/xc"
        android:textColor="@color/text"
        android:textSize="14sp" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/text"
        android:textSize="14sp" />

</LinearLayout>