<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_coin_white"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hint"
            android:textColor="@color/text3"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/bg_white_gray" />

        <RadioGroup
            android:id="@+id/dialog_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dialog_rb1"
                style="@style/MyCheckBox"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingLeft="15dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/dialog_rb2"
                style="@style/MyCheckBox"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
